[package]
name = "FerrousLearn"
version = "0.1.5"
authors = ["John Denton"]
edition = "2021"
description = "dependancy free, machine learning"
readme = "README.md"
repository = "https://github.com/lm-bds/FerrousLearn.git"
license = "MIT OR Apache-2.0"
keywords = ["machine-learning"]
categories = ["machine learning"]
include = ["/src"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
